# VLM-Based-Vision-Guided-Navigation

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  FAQ.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICKSTART.md  README.md  requirements.txt
con_pkg/: package.xml
examples/: README.md  monitor_system.py  test_text_publisher.py
ocr_pkg/: package.xml
src/vision_control/: package.xml  setup.py
src/vision_control/config/: control_params.yaml
src/vision_control/resource/: vision_control
src/vision_control/vision_control/: __init__.py  control_node.py
src/vision_navigation_bringup/: package.xml  setup.py
src/vision_navigation_bringup/launch/: control_only.launch.py  navigation_system.launch.py  ocr_only.launch.py  vlm_only.launch.py
src/vision_navigation_bringup/resource/: vision_navigation_bringup
src/vision_navigation_msgs/: CMakeLists.txt  package.xml
src/vision_navigation_msgs/msg/: DetectedText.msg  NavigationCommand.msg
src/vision_navigation_msgs/srv/: ProcessScene.srv
src/vision_ocr/: package.xml  setup.py
src/vision_ocr/config/: ocr_params.yaml
src/vision_ocr/resource/: vision_ocr
src/vision_ocr/vision_ocr/: __init__.py  ocr_node.py
src/vision_vlm/: package.xml  setup.py
src/vision_vlm/config/: vlm_params.yaml
src/vision_vlm/resource/: vision_vlm
src/vision_vlm/vision_vlm/: __init__.py  vlm_node.py
vlm_pkg/: package.xml
